test/goldpinger/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goldpinger-pod
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: goldpinger
      type: goldpinger-pod
  template:
    metadata:
      labels:
        app: goldpinger
        type: goldpinger-pod
    spec:
      serviceAccount: "goldpinger-serviceaccount"
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 2000
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/arch
                    operator: In
                    values:
                      - amd64
                      #- arm64
                      #- ppc64le
                      #- s390x
                  - key: kubernetes.io/os
                    operator: In
                    values:
                      - linux

        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: "app"
                      operator: In
                      values:
                        - goldpinger
                topologyKey: "kubernetes.io/hostname"
      containers:
        - name: goldpinger
          image: "docker.io/bloomberg/goldpinger:v3.9.0"
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          ports:
            - containerPort: 7070
              name: http
          readinessProbe:
            httpGet:
              path: /healthz
              port: 7070
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 7070
            initialDelaySeconds: 5
            periodSeconds: 5
